# Vulkan-Tutorial

./: .gitignore  Makefile  README.md  compile_commands.json  flake.nix  meson.build  meson.options  shell.nix
inc/: config.hpp  debug.hpp  decl.hpp  except.hpp  hello-triangle.hpp  implementation.hpp  meson.build
inc/helpers/: files.hpp  flags.hpp  meson.build  mini-vec.hpp  str.hpp
src/: general.cpp  main.cpp  meson.build  meta.cpp
src/helpers/: files.cpp  meson.build
src/shaders/: meson.build  shader.frag  shader.vert
src/vulkan/: buffers.cpp  command-buffers.cpp  command-pool.cpp  drawer.cpp  extensions-loader.cpp  framebuffers.cpp  general.cpp  graphics-pipeline.cpp  image-views.cpp  instance.cpp  logical-devices.cpp  meson.build  physical-devices.cpp  queues.cpp  render-pass.cpp  swap-chain.cpp  sync.cpp  vertex-buffer.cpp  vertex-processing.cpp  vertices.cpp  window-surface.cpp  window.cpp
src/vulkan/debug/: meson.build  misc.cpp  validation-layers.cpp
src/vulkan/shaders/: shader.vert
working-triangle/: Makefile  main.cpp  test
